[css-contain] Fix contain-size-replaced-002.html https://bugs.webkit.org/show_bug.cgi?id=235175

Patch by Rob Buis <rbuis@igalia.com> on 2022-01-15
Reviewed by Manuel Rego Casasnovas.

Source/WebCore:

If the SVG root has zero content width and/or height, there is no point
in painting the children contents.

Test: imported/w3c/web-platform-tests/css/css-contain/contain-size-replaced-002.html

* rendering/svg/LegacyRenderSVGRoot.cpp:
(WebCore::LegacyRenderSVGRoot::paintReplaced):

LayoutTests:

* TestExpectations:


Canonical link: https://commits.webkit.org/246077@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@288057 268f45cc-cd09-0410-ab3c-d52691b4dbfc